feat: Added endpoint for getting a single post with its comments
